--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,28 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="android:windowIsTranslucent">true</item>
     </style>
 
+    <style name="MyButton">
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/round_bt</item>
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:textColor">@color/qianbai</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <!--Bottom Tabs Style-->
+    <style name="tabStyle">
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:textColor">@color/qianhui</item>
+        <item name="android:button">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:drawablePadding">-5dp</item>
+        <item name="android:padding">4dp</item>
+    </style>
 </resources>
