--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,7 @@
         android:layout_below="@+id/codeImg"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
+        android:background="@drawable/round_bt"
         style="@style/MyButton" />
 
 
