--- a/app/src/main/res/layout/activity_basic_info.xml
+++ b/app/src/main/res/layout/activity_basic_info.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_weight="5"
         android:orientation="vertical"
         android:gravity="center">
         <TextView
@@ -28,6 +28,7 @@
             android:id="@+id/gongxuanBt"
             android:text="公选"
             android:layout_marginTop="10dp"
+            android:background="@drawable/round_bt"
             style="@style/MyButton"/>
 
         <TextView
@@ -42,6 +43,7 @@
             android:id="@+id/zhuanxuanBt"
             android:text="专选"
             android:layout_marginTop="10dp"
+            android:background="@drawable/round_bt"
             style="@style/MyButton"/>
 
         <TextView
@@ -56,6 +58,7 @@
             android:id="@+id/gongbiBt"
             android:text="公必"
             android:layout_marginTop="10dp"
+            android:background="@drawable/round_bt"
             style="@style/MyButton"/>
 
         <TextView
@@ -70,6 +73,7 @@
             android:id="@+id/zhuanbiBt"
             android:text="专必"
             android:layout_marginTop="10dp"
+            android:background="@drawable/round_bt"
             style="@style/MyButton"/>
     </LinearLayout>
 
