--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="font_small">12dp</dimen>
     <dimen name="font_normal">16dp</dimen>
     <dimen name="font_big">20dp</dimen>
+    <dimen name="font_xlarge">30dp</dimen>
 </resources>
