实现了监听&自动选课功能

--- a/app/src/main/res/layout/fragment_course_list.xml
+++ b/app/src/main/res/layout/fragment_course_list.xml
@@ -36,7 +36,7 @@
             android:alpha="0"
             android:textColor="@color/qianbai"
             android:textSize="@dimen/font_xlarge"
-            android:background="@drawable/round_bg"/>
+            android:background="@drawable/round_bg_qingse_touming"/>
     </RelativeLayout>
 
 </LinearLayout>
