--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
 
     <style name="MyButton">
         <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/round_bt</item>
         <item name="android:textSize">@dimen/font_normal</item>
         <item name="android:textColor">@color/qianbai</item>
         <item name="android:layout_width">wrap_content</item>
@@ -25,5 +26,14 @@
         <item name="android:layout_weight">1</item>
         <item name="android:drawablePadding">-5dp</item>
         <item name="android:padding">4dp</item>
+    </style>
+
+    <!--Mark Style-->
+    <style name="MarkStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:textSize">@dimen/font_small</item>
+        <item name="android:textColor">@color/qianbai</item>
     </style>
 </resources>
