--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -4,11 +4,22 @@
     android:orientation="vertical"
     tools:context="com.badprinter.sysu_course.activity.Course">
 
-    <ImageView
+    <RelativeLayout
+        android:id="@+id/topLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:background="@color/qianbai"/>
+        android:background="@color/lanse">
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/logo_nobg"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="20dp"/>
+
+    </RelativeLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
