--- a/app/src/main/res/layout/activity_safe_exchange.xml
+++ b/app/src/main/res/layout/activity_safe_exchange.xml
@@ -5,10 +5,18 @@
     android:background="@color/qianbai"
     tools:context="com.badprinter.sysu_course.activity.SafeExchange">
     <RelativeLayout
+        android:id="@+id/topLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2"
         android:background="@color/lanse">
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/huanke"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="20dp"/>
 
     </RelativeLayout>
 
